# groky

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUES.md  README.md  TODO.md  install.sh  pickup.md
.cargo/: config.toml
.github/workflows/: general-ci.yml  provider-catalog.yml  release.yml
crates/codegen/xai-fast-worktree/src/db/: mod.rs  tests.rs
crates/codegen/xai-file-utils/: Cargo.toml
crates/codegen/xai-file-utils/src/: gcs.rs  s3.rs  trace_context.rs  workspace_classifier.rs
crates/codegen/xai-file-utils/tests/: no_trace_upload_api.rs
crates/codegen/xai-grok-catalog/: Cargo.toml
crates/codegen/xai-grok-catalog/data/: models-dev.json  overrides.json
crates/codegen/xai-grok-catalog/src/: cache.rs  credentials.rs  discovery.rs  dynamic.rs  dynamic_cache.rs  http.rs  janus.rs  layer.rs  lib.rs  limits.rs  normalize.rs  refresh.rs  types.rs
crates/codegen/xai-grok-catalog/tests/: discovery_http.rs  generator.rs  refresh.rs
crates/codegen/xai-grok-catalog/tests/fixtures/: models-dev-small.json  openai-models.json
crates/codegen/xai-grok-config-types/src/: lib.rs
crates/codegen/xai-grok-config/src/: lib.rs  paths.rs
crates/codegen/xai-grok-config/tests/: groky_home.rs
crates/codegen/xai-grok-mcp/src/: lib.rs
crates/codegen/xai-grok-pager/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-pty-harness/src/: content.rs  env.rs
crates/codegen/xai-grok-pager-render/src/: util.rs
crates/codegen/xai-grok-pager/docs/user-guide/: 05-configuration.md
crates/codegen/xai-grok-pager/scripts/: install-enterprise.ps1  install-enterprise.sh  install.ps1  install.sh
crates/codegen/xai-grok-pager/src/: headless.rs  lib.rs  mcp_cmd.rs  plugin_cmd.rs  providers.rs  startup.rs  trace_cmd.rs  tracing.rs
crates/codegen/xai-grok-pager/src/acp/: mod.rs  model_state.rs  spawn.rs
crates/codegen/xai-grok-pager/src/app/: actions.rs  cli.rs  event_loop.rs  mermaid_worker.rs  mod.rs  modals.rs  (+2 more)
crates/codegen/xai-grok-pager/tests/: grok_home_paths.rs  janus_setup_ui.rs  model_picker.rs  providers_ui.rs  pty_e2e_persistence.rs  pty_e2e_provider_setup.rs
crates/codegen/xai-grok-sampler/: Cargo.toml
crates/codegen/xai-grok-sampler/src/: client.rs  config.rs  sampling_log.rs
crates/codegen/xai-grok-sampler/tests/: test_secret_redaction.rs
crates/codegen/xai-grok-sandbox/src/: paths.rs
crates/codegen/xai-grok-secrets/: Cargo.toml
crates/codegen/xai-grok-shell/: Cargo.toml  README.md
crates/codegen/xai-grok-shell/src/: bundle.rs  instrumentation.rs  mcp_doctor.rs  plugin.rs
crates/codegen/xai-grok-shell/tests/: provider_auth_storage.rs  provider_catalog_adapter.rs  provider_credentials.rs  provider_dynamic_refresh.rs  provider_dynamic_startup.rs  provider_extension.rs  provider_janus_setup.rs  provider_model_composition.rs  team_managed_config.rs  test_dynamic_provider_e2e.rs  test_heap_profile_monitor.rs
crates/codegen/xai-grok-telemetry/: Cargo.toml
crates/codegen/xai-grok-telemetry/src/: client.rs  config.rs  events.rs  instrumentation.rs  lib.rs  session_ctx.rs  session_metrics.rs
crates/codegen/xai-grok-telemetry/tests/: local_only_facade.rs
crates/codegen/xai-grok-test-support/: README.md
crates/codegen/xai-grok-test-support/src/: env.rs  headless.rs  leader.rs  lib.rs  mock_server.rs
crates/codegen/xai-grok-update/: Cargo.toml
crates/codegen/xai-grok-update/src/: auto_update.rs  minimum_version.rs  version.rs
crates/codegen/xai-grok-update/tests/: test_facade.rs  test_install_sh.rs
crates/codegen/xai-grok-voice/src/: auth.rs
crates/codegen/xai-grok-workspace/: Cargo.toml
crates/codegen/xai-grok-workspace/src/: handle.rs  hub_auth.rs
crates/common/xai-computer-hub-sdk/: Cargo.toml
crates/common/xai-computer-hub-sdk/src/: connection.rs  lib.rs  server.rs
crates/common/xai-tool-protocol/src/: frames.rs  lib.rs  methods.rs
crates/common/xai-tracing/: Cargo.toml
crates/common/xai-tracing/src/: dispatch.rs  fastrace.rs  http_client.rs  lib.rs
docs/: releasing.md
docs/configuration/: providers.md
docs/superpowers/plans/: 2026-07-16-dynamic-providers-and-janus.md  2026-07-16-provider-catalog-and-picker.md  2026-07-16-remove-network-telemetry.md  2026-07-17-portable-arm-no-login-no-phone-home.md  2026-07-22-v0.1.1-release-prep.md
docs/superpowers/specs/: 2026-07-16-telemetry-and-model-providers-design.md  2026-07-17-portable-arm-no-login-no-phone-home-design.md  2026-07-17-releases-rename-installer-design.md  2026-07-22-v0.1.1-release-prep-design.md
scripts/: check-provider-catalog.sh  test-install.sh  update-provider-catalog.sh
(+128 files in other folders)
