[package]
license = "Apache-2.0"
name = "xai-grok-catalog"
version = "0.1.0"
edition.workspace = true
description = "Dependency-neutral provider/model catalog types, bounded models.dev normalization, and field-aware layering"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
