[package]
license = "Apache-2.0"
name = "xai-grok-catalog"
version = "0.1.0"
edition.workspace = true
description = "Dependency-neutral provider/model catalog types, bounded models.dev normalization, and field-aware layering"

[features]
# Enables live fetching in the `generate_catalog` binary. The library now
# depends on reqwest unconditionally (runtime catalog refresh), so this
# feature only gates the generator's blocking fetch path.
generator = []

[dependencies]
arc-swap = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
