[package]
license = "Apache-2.0"
name = "xai-grok-telemetry"
version = "0.1.0"
edition.workspace = true
description = "Local diagnostics facade: no-op product-event types, local logs, and instrumentation for Grok Build sessions"
authors = ["xAI"]

[features]
default = []
default-bazel = []
memory-log = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-chrome = "0.7.2"
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
    "time",
] }
chrono = { workspace = true }
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
] }
reqwest = { workspace = true }
xai-grok-secrets = { workspace = true }
xai-grok-config = { workspace = true }
xai-grok-sampler = { workspace = true }
xai-token-estimation = { workspace = true }
dirs = { workspace = true }
# Single cross-edge: `events::ToolCallCompleted.outcome` reuses
# `xai_file_utils::events::types::ToolOutcome` so the local event log and
# the product telemetry event share the same enum surface. Semantically this enum
# lives with the events module in data-collector; not worth a third crate.
xai-file-utils = { path = "../xai-file-utils" }
whoami = { workspace = true }
uuid = { workspace = true, features = ["v5", "v7"] }
mid = "4.0.0"
tokio = { workspace = true, features = ["macros", "sync", "rt"] }
parking_lot = { workspace = true }

[dev-dependencies]
# Sets a symlink's own mtime (std's `set_modified` follows links) for prune tests.
filetime = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
