[package]
license = "Apache-2.0"
edition.workspace = true
name = "xai-tracing"
version = "0.1.0"

[dependencies]
http = { workspace = true }
log = { workspace = true }
fastrace = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
